PR port-sh3/35971: Mutex error on SH3 DIAGNOSTIC kernels